fix scroll overflow margin positionoing

--- a/src/views/tutorials-landing/components/product-section/product-section.module.css
+++ b/src/views/tutorials-landing/components/product-section/product-section.module.css
@@ -1,10 +1,8 @@
-.root {
-	@media (--dev-dot-tablet-down) {
-		padding-right: 0 !important; /* TODO */
-	}
+.mobileRoot {
+	--mobile-left-padding: 24px;
 }
 
-.mobileRoot {
+.nonMobileRoot {
 	column-gap: 64px;
 	display: grid;
 	grid-template-columns: 338px 1fr;
@@ -16,6 +14,11 @@
 	align-items: center;
 	display: flex;
 	gap: 12px;
+	color: blue;
+
+	@media (--dev-dot-tablet-down) {
+		padding-left: var(--mobile-left-padding);
+	}
 }
 
 .productIcon {
@@ -36,6 +39,10 @@
 	composes: hds-font-weight-regular from global;
 	color: var(--token-color-foreground-primary);
 	margin-top: 20px;
+
+	@media (--dev-dot-tablet-down) {
+		padding-left: var(--mobile-left-padding);
+	}
 }
 
 .generalCtasList {
@@ -102,7 +109,8 @@
 .mobileFeaturedCollectionsList {
 	display: grid;
 	gap: 20px;
-	grid-template-columns: repeat(3, minmax(40vw, 400px));
+	grid-auto-columns: minmax(40vw, 400px);
+	grid-auto-flow: column;
 	list-style: none;
 	margin-bottom: 0;
 	margin-top: 40px;
@@ -118,7 +126,11 @@
 	}
 
 	@media only screen and (max-width: 500px) {
-		grid-template-columns: repeat(3, minmax(75vw, 280px));
+		grid-auto-columns: minmax(75vw, 280px);
+	}
+
+	@media (--dev-dot-tablet-down) {
+		padding-left: var(--mobile-left-padding);
 	}
 }
 
@@ -137,11 +149,23 @@
 
 .mobileCtasAndFeaturedUseCases {
 	padding-top: 12px;
-	margin-left: 24px;
-	padding-right: 24px;
+	width: 100%;
 
-	@media (--dev-dot-mobile) {
-		margin-left: 0;
-		padding-right: 0;
+	&:not(:first-child) {
+		margin-left: 24px;
+		padding-right: 24px;
+
+		@media (--dev-dot-mobile) {
+			margin-left: 0;
+			padding-right: 0;
+		}
+
+		@media (--dev-dot-tablet-down) {
+			padding-left: 24px;
+		}
+	}
+
+	@media (--dev-dot-tablet-down) {
+		margin-left: var(--mobile-left-padding);
 	}
 }
